revise controller
