# openapi/carbonster-api.yaml
@@ -9,7 +9,8 @@ servers:
 paths:
   /airQuality/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -28,7 +29,8 @@ paths:
                   $ref: '#/components/schemas/Quality'
   /carbonmonoxide/statistic/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -47,7 +49,8 @@ paths:
                   $ref: '#/components/schemas/Statistic'
   /methane/statistic/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -66,7 +69,8 @@ paths:
                   $ref: '#/components/schemas/Statistic'
   /ozone/statistic/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -83,13 +87,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Statistic'
-  /carbonmonoxide/correlation/{country}:
-    parameters:
-    - name: country ISO 3166 Alpha-2 code
-      in: path
-      required: true
-      schema:
-        type: string
+  /carbonmonoxide/correlation:
     get:
       summary: Returns the correlation between carbonmonoxide and population of specified country
       operationId: controller.get_correlation_carbon
@@ -104,7 +102,8 @@ paths:
                   $ref: '#/components/schemas/Correlation'                
   /emission/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -123,7 +122,8 @@ paths:
                   $ref: '#/components/schemas/Emission'
   /emission/person/{country}:
     parameters:
-    - name: country ISO 3166 Alpha-2 code
+    - name: country
+      description: ISO 3166 Alpha-2 code
       in: path
       required: true
       schema:
@@ -153,6 +153,8 @@ components:
           type: number
         ozone:
           type: number
+        date:
+          type: string
     Statistic:
       type: object
       properties:
@@ -173,10 +175,15 @@ components:
     Correlation:
       type: object
       properties:
-        country:
-          type: string
         correlation:
-          type: number
+          type: object
+          properties:
+            country:
+              type: string
+            population:
+              type: string
+            carbonintensity:
+              type: number
     Emission:
       type: object
       properties:
